// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semi.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
semi: true
                                                                                | printWidth
=====================================input======================================
\`\`\`jsx
<div>foo</div>
\`\`\`

\`\`\`jsx
const a = 1;
<div>foo</div>;
\`\`\`

=====================================output=====================================
\`\`\`jsx
<div>foo</div>
\`\`\`

\`\`\`jsx
const a = 1;
<div>foo</div>;
\`\`\`

================================================================================
`;

exports[`semi.md format 2`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
semi: false
                                                                                | printWidth
=====================================input======================================
\`\`\`jsx
<div>foo</div>
\`\`\`

\`\`\`jsx
const a = 1;
<div>foo</div>;
\`\`\`

=====================================output=====================================
\`\`\`jsx
<div>foo</div>
\`\`\`

\`\`\`jsx
const a = 1
;<div>foo</div>
\`\`\`

================================================================================
`;
